Correction form alignement

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -17,6 +17,10 @@ a {
   }
 }
 
+form {
+  display: flex;
+}
+
 .btn-ask {
   padding: 0px;
   margin: 0px;
